--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -27,11 +27,13 @@
           <%= image_tag("feature1.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">Growth management</div>
-            <div class="feature-desc">Our core strength is the growth. We’ve team up with the
+            <div class="feature-desc">
+              Our core strength is the growth. We’ve team up with the
               best growth hacker we know to provide you the best
               services. Get results within a week and start engage with
-              all those new potential customers.</div>
-            <div class="feature-cta">Get started...</div>
+              all those new potential customers.
+            </div>
+            <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
         </div>
       </div>
@@ -39,7 +41,7 @@
       <!-- Feature Hashtag research -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <%= image_tag("feature2.png", class: "feature-icon") %>
+          <%= image_tag("feature2.png", class: "feature-icon icon-2") %>
           <div class="feature-content">
             <div class="feature-title">Hashtags research</div>
             <div class="feature-desc">A good hashtag search is a game changer when you want
