--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -45,7 +45,7 @@
     </div>
 
     <div class="row text-center">
-      <button class="button-primary">Start today</button>
+      <a href="#pricing" class="secondary-no-bg">Start Today</a>
     </div>
   </div>
 </div>
