add illustration in how section

--- a/app/assets/stylesheets/sections/_how.scss
+++ b/app/assets/stylesheets/sections/_how.scss
@@ -2,5 +2,18 @@
   min-height: 70vh;
   background-color: #F2F2F2;
   margin-top: -50px;
-  padding: 100px 0;
+  padding: 100px 0 200px;
+}
+
+.illu-small {
+  height: 180px;
+}
+
+.illu-medium {
+  height: 200px;
+}
+
+
+.illu-large {
+  height: 250px;
 }
