--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -2,15 +2,15 @@
   <!-- Title -->
   <div class="container">
     <div class="row">
-      <h3 class="how-title text-center">How it works</h3>
+      <h3 class="how-title text-center">How does it work?</h3>
     </div>
 
     <!-- Cards -->
-    <div class="row">
+    <div class="row mt50">
       <!-- Step 1 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <img src="" alt="">
+          <%= image_tag("illu-1", class: "illu-medium") %>
           <h4>Fill a form to explain your needs.</h4>
           <p></p>
         </div>
@@ -19,7 +19,7 @@
       <!-- Step 2 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <img src="" alt="">
+          <%= image_tag("illu-2", class: "illu-medium") %>
           <h4>Get in touch with our team within a day.</h4>
           <p></p>
         </div>
@@ -28,7 +28,7 @@
       <!-- Step 3 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <img src="" alt="">
+          <%= image_tag("illu-2", class: "illu-medium") %>
           <h4>Let our expert works on your strategy.</h4>
           <p></p>
         </div>
@@ -37,15 +37,18 @@
       <!-- Step 4 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <img src="" alt="">
+          <%= image_tag("illu-3", class: "illu-medium") %>
           <h4>See the magic happened...</h4>
           <p></p>
         </div>
       </div>
     </div>
 
-    <div class="row text-center">
-      <a href="#pricing" class="secondary-no-bg">Start Today</a>
+
+    <div class="row text-center mt50">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <a href="#pricing" class="primary-btn">Start Today</a>
+      </div>
     </div>
-  </div>
+   </div>
 </div>
