--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -44,11 +44,13 @@
           <%= image_tag("feature2.png", class: "feature-icon icon-2") %>
           <div class="feature-content">
             <div class="feature-title">Hashtags research</div>
-            <div class="feature-desc">A good hashtag search is a game changer when you want
+            <div class="feature-desc">
+              A good hashtag search is a game changer when you want
               to reach more people everyday. Let us do that for you.
               Engage with the right people at the right moment will turn
-              your basic account into a pro one!</div>
-            <div class="feature-cta">Get started...</div>
+              your basic account into a pro one!
+            </div>
+            <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
         </div>
       </div>
@@ -59,11 +61,13 @@
           <%= image_tag("feature3.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">Digital Strategy</div>
-            <div class="feature-desc">Set up awesome strategies with us to win the market on
+            <div class="feature-desc">
+              Set up awesome strategies with us to win the market on
               Instagram. Be noticed by targeted customers by engaging
               with them and creating the best experience for them
-              on your Instagram profile.</div>
-            <div class="feature-cta">Get started...</div>
+              on your Instagram profile.
+            </div>
+            <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
         </div>
       </div>
@@ -74,11 +78,13 @@
           <%= image_tag("feature4.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">We post for you </div>
-            <div class="feature-desc">In order to save you time, we post for you. Our team analyse
+            <div class="feature-desc">
+              In order to save you time, we post for you. Our team analyse
               the best time to reach your community and engage with
               them. By doing this it help you to keep focus on what matter
-              most, your content and your customers.</div>
-            <div class="feature-cta">Get started...</div>
+              most, your content and your customers.
+            </div>
+            <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
         </div>
       </div>
@@ -89,11 +95,13 @@
           <%= image_tag("feature5.png", class: "") %>
           <div class="feature-content">
             <div class="feature-title">Design Coaching</div>
-            <div class="feature-desc">With a great eye of design, our UX-UI team is here to
+            <div class="feature-desc">
+              With a great eye of design, our UX-UI team is here to
               give the best advices to match the trends on Instagram
               in term of content. From stories to posts be the best
-              in your domain. </div>
-            <div class="feature-cta">Get started...</div>
+              in your domain.
+            </div>
+            <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
         </div>
       </div>
@@ -104,11 +112,13 @@
           <%= image_tag("feature6.png", class: "") %>
           <div class="feature-content">
             <div class="feature-title">Support and reports</div>
-            <div class="feature-desc">Depends on your plan, receive reports that show you where
+            <div class="feature-desc">
+              Depends on your plan, receive reports that show you where
               and when things happened on your account. Giving you
               the best support we can is one of our concern, at anytime.
-              Let’s grow together ! </div>
-            <div class="feature-cta">Get started...</div>
+              Let’s grow together !
+            </div>
+            <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
         </div>
       </div>
