--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,14 @@
 /////////////////////////////////////////////////////////////////////// Card How
 .card-how {
   text-align: center;
+  margin-bottom: 30px;
+
+  h4 {
+    font-family: "Avenir";
+    font-size: 18px;
+    line-height: 1.2em;
+    font-weight: 400;
+  }
 }
 
 ////////////////////////////////////////////////////////////////// Card discover
