--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -10,8 +10,8 @@
       <!-- Step 1 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-1", class: "illu-medium") %>
-          <h4>Fill a form to explain your needs.</h4>
+          <%= image_tag("illu-1", class: "illu-small") %>
+          <h4><strong>1.</strong> Fill a form to explain your needs.</h4>
           <p></p>
         </div>
       </div>
@@ -19,8 +19,8 @@
       <!-- Step 2 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-2", class: "illu-medium") %>
-          <h4>Get in touch with our team within a day.</h4>
+          <%= image_tag("illu-4", class: "illu-small") %>
+          <h4><strong>2.</strong> Get in touch with our team within a day.</h4>
           <p></p>
         </div>
       </div>
@@ -28,8 +28,8 @@
       <!-- Step 3 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-2", class: "illu-medium") %>
-          <h4>Let our expert works on your strategy.</h4>
+          <%= image_tag("illu-2", class: "illu-small") %>
+          <h4><strong>3.</strong> Let our expert works on your strategy.</h4>
           <p></p>
         </div>
       </div>
@@ -37,8 +37,8 @@
       <!-- Step 4 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-3", class: "illu-medium") %>
-          <h4>See the magic happened...</h4>
+          <%= image_tag("illu-5", class: "illu-small") %>
+          <h4><strong>4.</strong> See the magic happened...</h4>
           <p></p>
         </div>
       </div>
