--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -10,7 +10,7 @@
       <!-- Step 1 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-1", class: "illu-small") %>
+          <%#= image_tag("illu-1", class: "illu-small") %>
           <h4><strong>1.</strong> Fill a form to explain your needs.</h4>
           <p></p>
         </div>
