--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -19,7 +19,7 @@
       <!-- Step 2 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-4", class: "illu-small") %>
+          <%#= image_tag("illu-4", class: "illu-small") %>
           <h4><strong>2.</strong> Get in touch with our team within a day.</h4>
           <p></p>
         </div>
@@ -28,7 +28,7 @@
       <!-- Step 3 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-2", class: "illu-small") %>
+          <%#= image_tag("illu-2", class: "illu-small") %>
           <h4><strong>3.</strong> Let our expert works on your strategy.</h4>
           <p></p>
         </div>
@@ -37,7 +37,7 @@
       <!-- Step 4 -->
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
-          <%= image_tag("illu-5", class: "illu-small") %>
+          <%#= image_tag("illu-5", class: "illu-small") %>
           <h4><strong>4.</strong> See the magic happened...</h4>
           <p></p>
         </div>
