--- a/app/assets/stylesheets/sections/_contact.scss
+++ b/app/assets/stylesheets/sections/_contact.scss
@@ -9,6 +9,9 @@
 
 .contact-title {
   font-size: 34px;
-  font-weight: 400;
+  font-weight: 300 !important;
 }
 
+.red-link {
+  color: $brand-red !important;
+}
