--- a/app/views/sections/_contact_us.html.erb
+++ b/app/views/sections/_contact_us.html.erb
@@ -1,7 +1,7 @@
 <div id="contact">
   <div class="container">
     <div class="row text-center">
-      <h4 class="contact-title">Do you still have questions?  Visit our <a href="/faq">FAQ</a> or contact us via mail.</h4>
+      <h4 class="contact-title">Do you still have questions?  Visit our <a href="/faq" class="red-link">FAQ</a> or contact us via mail.</h4>
     </div>
     <div class="row text-center mt30">
       <a class="secondary-btn" href="mailto:bastien@helloradius.co">Contact us</a>
