--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -19,7 +19,7 @@
   padding: 30px;
   min-height: 350px;
   border-radius: 10px;
-  box-shadow: 0px 6px 20px 0px rgba(160, 160, 160, .3);
+  box-shadow: 0px 6px 20px 0px rgba(160, 160, 160, 0.3);
   margin-top: -130px;
 
 
