--- a/app/views/banners/_banner_home.html.erb
+++ b/app/views/banners/_banner_home.html.erb
@@ -2,7 +2,7 @@
   <!-- Banner Title -->
   <h1 class="banner-title">
     The power of <mark class="highlight">instagram experts</mark> <br>
-    who brings your account to the next level.
+    who bring your account to the next level.
   </h1>
   <p class="banner-desc">Get exposure, grow your audience, boost your engagement.</p>
   <a class="btn-pricing btn-medium" href="/plan">Get Started</a>
