typo in features and mission section

--- a/app/views/sections/_discover.html.erb
+++ b/app/views/sections/_discover.html.erb
@@ -8,7 +8,7 @@
             <div class="discover-title">Content Analysis</div>
             <p class="discover-desc">
               Get your account reviewed by our team of experts, let’s them work
-              on improvments, receive the monthly report.
+              on improvements, receive the monthly report.
             </p>
             <a class="secondary-btn btn-large" href="#features">See more</a>
           </div>
