--- a/app/assets/stylesheets/sections/_features.scss
+++ b/app/assets/stylesheets/sections/_features.scss
@@ -1,4 +1,19 @@
 #features {
   margin-top: -75px;
-  padding: 75px 0 200px;
+  padding: 150px 0 200px;
+}
+
+.mission-title {
+  font-family: "Avenir";
+  font-weight: 600;
+  font-size: 26px;
+  margin-bottom: 35px;
+}
+
+.mission-desc {
+  font-family: "Avenir";
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1.5em;
+  margin-bottom: 30px;
 }
