--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -4,12 +4,12 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="mission text-center">
-          <h2>Our mission</h2>
+          <div class="mission-title">Our mission</div>
           <!-- Description -->
-          <div class="features-desc">
+          <div class="mission-desc">
             <strong>helloradius</strong> is a social media agency focus on Instagram.
             Our goal is to increase significantly <br>
-            your traffic and your engagment. Saving you time is also one of our biggest concern, we want you <br>
+            your traffic and your engagement. Saving you time is also one of our biggest concern, we want you <br>
             to just focus on taking care of your community while we’re doing the rest !
             <br>
             We are here to coach you through your journey on Instagram.
