add arrow in mobile

--- a/app/views/banners/_banner_home.html.erb
+++ b/app/views/banners/_banner_home.html.erb
@@ -7,6 +7,9 @@
   <p class="banner-desc">Get exposure, grow your audience, boost your engagement.</p>
   <a class="btn-pricing btn-medium" href="/plan">Get Started</a>
 
+  <!-- Arrow down mobile -->
+  <i class="fas fa-arrow-down"></i>
+
   <!-- Banner img -->
   <%= image_tag("banner-bg.svg", class: "banner-bg") %>
 </div>
