--- a/app/views/sections/_discover.html.erb
+++ b/app/views/sections/_discover.html.erb
@@ -18,8 +18,7 @@
             <%= image_tag("002-growth.svg", class: "discover-image pt10") %>
             <div class="discover-title">Growth Strategies</div>
             <p class="discover-desc">
-              At helloradius our experts create tailored strategies for you and
-              your and your users. Change the way you interact with potential customers.
+              At helloradius our experts create tailored strategies for you and your users. Change the way you interact with potential customers.
             </p>
             <a class="secondary-btn btn-large" href="#features">See more</a>
           </div>
