--- a/app/assets/stylesheets/sections/_banner.scss
+++ b/app/assets/stylesheets/sections/_banner.scss
@@ -24,6 +24,19 @@
 
 }
 
+
+.fa-arrow-down {
+  position: absolute;
+  bottom: 50px;
+  left: 9%;
+  font-size: 35px;
+  color: $brand-red;
+
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
+}
+
 .banner-title {
   font-family: "Avenir";
   font-weight: 900;
