add dropdown menu

--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -112,8 +112,9 @@
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
           <div class="pricing-title text-center">Tailored</div>
-          <div class="pricing-amount ">$ 89</div>
-          <div class="pricing-features">
+          <div class="pricing-tailord">You need a more specific plan? Drop us a line</div>
+          <%= image_tag("dotted-line-pricing.svg", class: "dotted-line-pricing")%>
+          <div class="pricing-features opacity-04">
             <ul>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
