--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -229,10 +229,24 @@
   margin-top: 20px;
 }
 
+.pricing-tailord {
+  font-family: "Avenir Next", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  color: $gray-dark;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 27px;
+  padding-left: 3%;
+  padding-right: 3%;
+}
 
-
-
-
+.dotted-line-pricing {
+  position: absolute;
+  left: 120px;
+  top: 170px;
+  height: 330px;
+}
 
 
 
