--- a/app/assets/stylesheets/sections/_banner.scss
+++ b/app/assets/stylesheets/sections/_banner.scss
@@ -6,8 +6,8 @@
   padding: 15% 11%;
 
   @media screen and (max-width: 767px) {
-    height: 80vh;
-    padding: 25% 9%;
+    height: 90vh;
+    padding: 35% 9% 25%;
   }
 }
 
