--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -2,17 +2,14 @@
   <div class="container">
     <!-- Our Mission -->
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-12 text-center">
         <div class="mission text-center">
           <div class="mission-title">Our mission</div>
           <!-- Description -->
           <div class="mission-desc">
             <strong>helloradius</strong> is a social media agency focus on Instagram.
-            Our goal is to increase significantly <br>
-            your traffic and your engagement. Saving you time is also one of our biggest concern, we want you <br>
-            to just focus on taking care of your community while we’re doing the rest !
-            <br>
-            We are here to coach you through your journey on Instagram.
+            Our goal is to increase significantly your traffic and your engagement. Saving you time is also one of our biggest concern, we want you to just focus on taking care of your community while we’re doing the rest!
+            <br> We are here to coach you through your journey on Instagram.
           </div>
         </div>
       </div>
@@ -24,7 +21,7 @@
       <!-- Feature Growth Management -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <%= image_tag("feature1.png", class: "feature-icon") %>
+          <%= image_tag("feature1.png", class: "feature-icon icon-1") %>
           <div class="feature-content">
             <div class="feature-title">Growth management</div>
             <div class="feature-desc">
@@ -58,7 +55,7 @@
       <!-- Feature Digital Strategy -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <%= image_tag("feature3.png", class: "feature-icon") %>
+          <%= image_tag("feature3.png", class: "feature-icon icon-3") %>
           <div class="feature-content">
             <div class="feature-title">Digital Strategy</div>
             <div class="feature-desc">
@@ -75,7 +72,7 @@
       <!-- Feature We post for you -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <%= image_tag("feature4.png", class: "feature-icon") %>
+          <%= image_tag("feature4.png", class: "feature-icon icon-4") %>
           <div class="feature-content">
             <div class="feature-title">We post for you </div>
             <div class="feature-desc">
@@ -92,7 +89,7 @@
       <!-- Feature Design Coaching -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <%= image_tag("feature5.png", class: "") %>
+          <%= image_tag("feature5.png", class: "feature-icon icon-5") %>
           <div class="feature-content">
             <div class="feature-title">Design Coaching</div>
             <div class="feature-desc">
@@ -109,14 +106,14 @@
       <!-- Feature Support and Reports -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <%= image_tag("feature6.png", class: "") %>
+          <%= image_tag("feature6.png", class: "feature-icon icon-6") %>
           <div class="feature-content">
             <div class="feature-title">Support and reports</div>
             <div class="feature-desc">
               Depends on your plan, receive reports that show you where
               and when things happened on your account. Giving you
               the best support we can is one of our concern, at anytime.
-              Let’s grow together !
+              Let’s grow together!
             </div>
             <a href="#pricing" class="feature-cta">Get started...</a>
           </div>
