--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -112,6 +112,10 @@
   box-shadow: 0px 6px 20px 0px rgba(160, 160, 160, .3);
   margin-top: 50px;
 
+  @media screen and (max-width: 767px) {
+    height: 270px;
+  }
+
 //   .feature-desc {
 //   position: absolute;
 //   left: 20%;
@@ -135,6 +139,10 @@
   font-size: 16px;
   font-weight: 600;
   top: 45px;
+
+  @media screen and (max-width: 767px) {
+    left: 15%;
+  }
 }
 
 .feature-desc {
@@ -143,6 +151,10 @@
   color: $gray-medium;
   top: 80px;
   width: 73%;
+
+  @media screen and (max-width: 767px) {
+    left: 15%;
+  }
 }
 
 .feature-cta {
@@ -150,6 +162,10 @@
   left: 20%;
   bottom: 15%;
   color: $brand-red;
+
+  @media screen and (max-width: 767px) {
+    left: 15%;
+  }
 
   &:hover {
     text-decoration: none;
