--- a/app/assets/stylesheets/sections/_contact.scss
+++ b/app/assets/stylesheets/sections/_contact.scss
@@ -5,6 +5,10 @@
   padding: 120px 0 100px;
   background-color: $gray-light;
   font-family: "Avenir";
+  @media screen and (max-width: 767px) {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
 
 .contact-title {
