--- a/app/views/shared/_navbar_home.html.erb
+++ b/app/views/shared/_navbar_home.html.erb
@@ -60,7 +60,7 @@
       <li><a href="#pricing">Pricing</a></li>
       <li><a href="#contact">Contact</a></li>
       <li role="separator" class="divider"></li>
-      <li><a href="/plan">Gat Started</a></li>
+      <li><a href="/plan">Get Started</a></li>
     </ul>
   </div>
 </div>
