add payment method for starter

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@
 
 // Plans
 // @import "plans/plan";
-// @import "plans/starter";
+@import "plans/starter";
 // @import "plans/professional";
 // @import "plans/unlimited";
 
