--- a/app/views/plans/starter.html.erb
+++ b/app/views/plans/starter.html.erb
@@ -1,12 +1,11 @@
 <%= render 'shared/navbar' %>
 
 <div id="starter-plan">
+  <!-- Starter Paywhirl Widget -->
   <script type="text/javascript" id='pw_5ba265ce77ab4' src="https://app.paywhirl.com/pw.js"></script>
   <script>paywhirl('widget',{autoscroll: 1, domain:'helloradius' ,uuid:'d1d20bcc-8ff7-403f-8579-61476b946e99'},'pw_5ba265ce77ab4'); </script>
 
-<!--   <script type="text/javascript" id='pw_5ba265ce77ab4' src="https://app.paywhirl.com/pw.js"></script>
-  <script>paywhirl('button',{autoscroll: 1, domain:'helloradius' ,uuid:'d1d20bcc-8ff7-403f-8579-61476b946e99', button_image: '' },'pw_5ba265ce77ab4'); </script> -->
-
+  <!-- Stripe Logo Secure -->
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
