--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+        <!-- Starter Plan -->
         <div class="card-pricing">
           <div class="pricing-title text-center">Starter</div>
           <div class="pricing-amount">$ 89</div>
@@ -37,6 +38,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Pro Plan -->
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
           <div class="pricing-title text-center">Professional</div>
@@ -69,10 +72,12 @@
 
           <!-- Footer Card Pricing -->
           <div class="pricing-card-footer">
-            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+            <a href="/plan/pro" class="btn-pricing">Purchase</a>
           </div>
         </div>
       </div>
+
+      <!-- Unlimited Plan -->
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
           <div class="pricing-title text-center">Unlimited</div>
@@ -105,10 +110,12 @@
 
           <!-- Footer Card Pricing -->
           <div class="pricing-card-footer">
-            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+            <a href="/plan/Unlimited" class="btn-pricing">Purchase</a>
           </div>
         </div>
       </div>
+
+      <!-- Tailored Plan -->
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
           <div class="pricing-title text-center">Tailored</div>
