--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,8 +33,8 @@
 // Plans
 // @import "plans/plan";
 @import "plans/starter";
-// @import "plans/professional";
-// @import "plans/unlimited";
+@import "plans/pro";
+@import "plans/unlimited";
 
 body {
   margin: 0;
