--- a/app/views/plans/pro.html.erb
+++ b/app/views/plans/pro.html.erb
@@ -1,2 +1,18 @@
 <%= render 'shared/navbar' %>
+
+<div id="pro-plan">
+  <!-- Starter Paywhirl Widget -->
+  <script type="text/javascript" id='pw_5ba27aa80723c' src="https://app.paywhirl.com/pw.js"></script>
+  <script>paywhirl('widget',{autoscroll: 1, domain:'helloradius' ,uuid:'75c148a6-7700-4ddf-a944-a2ab0260735c'},'pw_5ba27aa80723c'); </script>
+
+  <!-- Stripe Logo Secure -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <%= image_tag("stripe.png", class: "stripe-logo")%>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%= render 'shared/footer' %>
