--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@
 @import "pages/terms";
 
 // Plans
-// @import "plans/plan";
+@import "plans/plan";
 @import "plans/starter";
 @import "plans/pro";
 @import "plans/unlimited";
