--- a/app/views/plans/plan.html.erb
+++ b/app/views/plans/plan.html.erb
@@ -1,2 +1,25 @@
 <%= render 'shared/navbar' %>
+
+<div id="plan">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <!-- Starter Paywhirl Widget -->
+        <script type="text/javascript" id='pw_5ba265ce77ab4' src="https://app.paywhirl.com/pw.js"></script>
+        <script>paywhirl('widget',{autoscroll: 0, domain:'helloradius' ,uuid:'d1d20bcc-8ff7-403f-8579-61476b946e99'},'pw_5ba265ce77ab4'); </script>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <!-- Pro Paywhirl Widget -->
+        <script type="text/javascript" id='pw_5ba27aa80723c' src="https://app.paywhirl.com/pw.js"></script>
+        <script>paywhirl('widget',{autoscroll: 0, domain:'helloradius' ,uuid:'75c148a6-7700-4ddf-a944-a2ab0260735c'},'pw_5ba27aa80723c'); </script>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <!-- Unlimited Paywhirl Widget -->
+        <script type="text/javascript" id='pw_5ba27d2bb71b2' src="https://app.paywhirl.com/pw.js"></script>
+        <script>paywhirl('widget',{autoscroll: 0, domain:'helloradius' ,uuid:'2a44fb91-801d-4226-8b0f-f0d1b76efc36'},'pw_5ba27d2bb71b2'); </script>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%= render 'shared/footer' %>
