--- a/app/views/plans/pro.html.erb
+++ b/app/views/plans/pro.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/navbar' %>
 
 <div id="pro-plan">
-  <!-- Starter Paywhirl Widget -->
+  <!-- Pro Paywhirl Widget -->
   <script type="text/javascript" id='pw_5ba27aa80723c' src="https://app.paywhirl.com/pw.js"></script>
-  <script>paywhirl('widget',{autoscroll: 1, domain:'helloradius' ,uuid:'75c148a6-7700-4ddf-a944-a2ab0260735c'},'pw_5ba27aa80723c'); </script>
+  <script>paywhirl('widget',{autoscroll: 0, domain:'helloradius' ,uuid:'75c148a6-7700-4ddf-a944-a2ab0260735c'},'pw_5ba27aa80723c'); </script>
 
   <!-- Stripe Logo Secure -->
   <div class="container">
