--- a/app/views/plans/unlimited.html.erb
+++ b/app/views/plans/unlimited.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/navbar' %>
 
 <div id="unlimited-plan">
-  <!-- Starter Paywhirl Widget -->
+  <!-- Unlimited Paywhirl Widget -->
   <script type="text/javascript" id='pw_5ba27d2bb71b2' src="https://app.paywhirl.com/pw.js"></script>
-  <script>paywhirl('widget',{autoscroll: 1, domain:'helloradius' ,uuid:'2a44fb91-801d-4226-8b0f-f0d1b76efc36'},'pw_5ba27d2bb71b2'); </script>
+  <script>paywhirl('widget',{autoscroll: 0, domain:'helloradius' ,uuid:'2a44fb91-801d-4226-8b0f-f0d1b76efc36'},'pw_5ba27d2bb71b2'); </script>
 
   <!-- Stripe Logo Secure -->
   <div class="container">
