--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -110,7 +110,7 @@
 
           <!-- Footer Card Pricing -->
           <div class="pricing-card-footer">
-            <a href="/plan/Unlimited" class="btn-pricing">Purchase</a>
+            <a href="/plan/unlimited" class="btn-pricing">Purchase</a>
           </div>
         </div>
       </div>
