add thank you page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 // @import "pages/contact";
 @import "pages/faq";
 @import "pages/jobs";
-// @import "pages/pages";
+@import "pages/thankyou";
 @import "pages/terms";
 
 // Plans
