--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -18,12 +18,12 @@
     <div class="socials">
       <ul class="list-inline">
         <li>
-          <a href="">
+          <a href="https://www.instagram.com/helloradius" target="_blank">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://www.facebook.com/helloradius" target="_blank">
             <i class="fab fa-facebook" aria-hidden="true"></i>
           </a>
         </li>
