--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,5 +1,8 @@
 <%= render 'shared/navbar' %>
 
+<!-- Faq Banner -->
+<%= render 'banners/banner_faq' %>
+
 <div id="faq">
   <h1>Under Construction</h1>
   <h3>This section is coming really soon!</h3>
