--- a/app/assets/stylesheets/sections/_banner.scss
+++ b/app/assets/stylesheets/sections/_banner.scss
@@ -1,3 +1,4 @@
+//////////////////////////////////////////////////////////////////// Banner home
 #banner-home {
   position: relative;
   height: 80vh;
@@ -118,3 +119,26 @@
     font-size: 15px;
   }
 }
+
+
+///////////////////////////////////////////////////////////////////// Banner faq
+
+#banner-faq {
+  position: relative;
+
+  .banner-title {
+    position: absolute;
+    bottom: 23px;
+    left: 9%;
+    font-size: 33px;
+    color: white;
+    font-weight: 600;
+  }
+}
+
+.banner-pages {
+  width: 100%;
+  background-size: cover;
+}
+
+
