--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: $gray-light;
+  background-color: RGBA(253, 253, 253, .95);
   top: 0;
   width: 100%;
   z-index: 10;
