--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -182,8 +182,8 @@
 .card-pricing {
   position: relative;
   max-width: 250px;
-  min-height: 550px;
-  max-height: 600px;
+  min-height: 590px;
+  max-height: 650px;
   background-color: white;
   border-radius: 10px;
   padding-top: 40px;
@@ -209,12 +209,18 @@
   opacity: 0.7;
   text-align: center;
   margin-top: 10px;
+
+  span {
+    font-size: 55px;
+    margin-right: 10px;
+  }
 }
 
 .pricing-features {
   ul {
     padding-left: 15%;
     list-style: none;
+    padding-top: 20px;
 
     li {
       font-family: "Avenir", sans-serif;
@@ -260,12 +266,21 @@
 .dotted-line-pricing {
   position: absolute;
   left: 120px;
-  top: 170px;
+  top: 185px;
   height: 330px;
 }
 
-
-
+.pricing-montlhy {
+  font-family: "Avenir";
+  text-align: center;
+  font-size: 16px;
+  color: $gray-dark;
+  color: $brand-red;
+  opacity: .6;
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  margin-top: -10px;
+}
 
 
 
