--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -20,7 +20,7 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
           <%= image_tag("illu-4.svg", class: "illu-small") %>
-          <h4><strong>2.</strong> Get in touch with our team within a day.</h4>
+          <h4><strong>2.</strong> Get in touch with our team <strong>within a day.</strong></h4>
           <p></p>
         </div>
       </div>
