--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -5,7 +5,8 @@
         <!-- Starter Plan -->
         <div class="card-pricing">
           <div class="pricing-title text-center">Starter</div>
-          <div class="pricing-amount">$ 89</div>
+          <div class="pricing-amount"><span>$</span>89</div>
+          <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
               <li>
@@ -43,7 +44,8 @@
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
           <div class="pricing-title text-center">Professional</div>
-          <div class="pricing-amount ">$ 149</div>
+          <div class="pricing-amount "><span>$</span>149</div>
+          <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
               <li>
@@ -81,7 +83,8 @@
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
           <div class="pricing-title text-center">Unlimited</div>
-          <div class="pricing-amount ">$ 349</div>
+          <div class="pricing-amount "><span>$</span>349</div>
+          <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
               <li>
