--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -2,7 +2,7 @@
   <!-- Title -->
   <div class="container">
     <div class="row">
-      <h3 class="how-title text-center">How does it work?</h3>
+      <h3 class="how-title text-center">How it work?</h3>
     </div>
 
     <!-- Cards -->
