--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,5 +1,5 @@
 #faq {
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 50px;
   padding-bottom: 50px;
 
@@ -39,6 +39,10 @@
       text-decoration: none;
       width: 100%;
       text-align: left;
+
+      @media screen and (max-width: 767px) {
+        font-size: 16px !important;
+      }
 
       &:hover {
         text-decoration: none;
